--- a/index.html
+++ b/index.html
@@ -41,11 +41,67 @@
                     <p class="bottom-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
                 </div>
 
-                <div>
-                    <div class="image-div">
+                <div class="bottom-div">
+                    <div>
                         <img src="images/plane.jpg" alt="div-image">
+
+                    </div>
+                    <div class="bottom-box">
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem.</p>
                     </div>
                 </div>
+                <div class="bottom-div">
+                    <div>
+                        <img src="images/house.jpg" alt="div-image">
+
+                    </div>
+                    <div class="bottom-box">
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem.</p>
+                    </div>
+                </div>
+                <div class="bottom-div">
+                    <div>
+                        <img src="images/beach.jpg" alt="div-image">
+
+                    </div>
+                    <div class="bottom-box">
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem.</p>
+                    </div>
+                </div>
+                 
+                
+                <div class="bottom-section">
+
+
+                <div class="bottom-div">
+                    <div>
+                        <img src="images/ship.jpg" alt="div-image">
+
+                    </div>
+                    <div class="bottom-box">
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem.</p>
+                    </div>
+                </div>
+
+                <div class="bottom-div">
+                    <div>
+                        <img src="images/firecamp.jpg" alt="div-image">
+
+                    </div>
+                    <div class="bottom-box">
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem.</p>
+                    </div>
+                </div>
+                <div class="bottom-div">
+                    <div>
+                        <img src="images/meeting.jpg" alt="div-image">
+
+                    </div>
+                    <div class="bottom-box">
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem.</p>
+                    </div>
+                </div>
+            </div>
 
             </div>
 	</header>
