--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
         <div class="background">
-            <img src="images/background.jpg" alt="banner-img">
+            <img class="banner-image" src="images/background.jpg" alt="banner-img">
             <div class="banner-text">
                 <h2 class="banner-h2">Discover Greece</h2>
                 <h3 class="banner-h3">TRAVEL WITH UNIQE EXPERIENCE</h3>
