--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
             </div>
 
             </div>
+            
+            <div class="car-block">
+                <img class="car-img" src="https://www.kindpng.com/picc/m/181-1813878_vector-car-png-file-vector-png-of-car.png">
+            </div>
 	</header>
 
     
